fix: scrollbars z-index issue

--- a/package/src/styles.scss
+++ b/package/src/styles.scss
@@ -33,6 +33,7 @@
   position: absolute;
   transition: background-color 200ms;
   visibility: hidden;
+  z-index: 1;
 
   &:hover {
     background: rgba(255, 255, 255, .9);
